# mpi_cpp_tools

./: CMakeLists.txt  Doxyfile.in  package.xml  readme.md
include/mpi_cpp_tools/: basic_tools.hpp  dynamical_systems.hpp  infix_iterator.h  math.hpp
tests/: test_linear_dynamics.cpp
