<?xml version="1.0"?>
<package>
  <name>mpi_cpp_tools</name>
  <version>1.0.0</version>
  <description>
    General cpp tools
  </description>
  <author email="manuel.wuthrich@gmail.com">Manuel Wuthrich</author>
  <maintainer email="manuel.wuthrich@gmail.com">Manuel Wuthrich</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend> mpi_cmake_modules </build_depend>
  <run_depend>   mpi_cmake_modules </run_depend>

</package>
